--- a/scss/style.css
+++ b/scss/style.css
@@ -49,8 +49,8 @@ a {
   }
 }
 
-#sidenav a {
-  padding: 6px 0 6px 0;
+#sidebar-menu a {
+  padding: 20px 0 6px 0;
   text-decoration: none;
   font-size: 20px;
   color: slategrey;
@@ -58,13 +58,9 @@ a {
   text-align: center;
 }
 
-#sidenav a:hover {
+#sidebar-menu a:hover {
   text-decoration: underline;
   color: #545454;
-}
-
-#sidebar-menu a {
-  padding-top: 20px;
 }
 
 #initial-box {
@@ -73,6 +69,11 @@ a {
   height: 120px;
   text-align: center;
   font-size: 35px;
+}
+
+#initial-box a {
+  color: #3f3f3f;
+  display: block;
 }
 
 .mobile-menu {
@@ -101,6 +102,7 @@ a {
 
 .menu-item a {
   color: #3f3f3f;
+  display: block;
 }
 
 .menu-item h3 {
@@ -476,10 +478,10 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
   background: url("../images/International-Marble-Chicago.jpg") no-repeat;
-  height: auto;
+  background-size: cover;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   #scs-scheme-section {
     height: 100vh;
   }
